-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta2
-
None
-
-
47b070caf (dev), 0f5f2a1ef (dev), caa9d1bc5 (6.10), 894f5feec (6.10), 2b4129675 (6.9), 824ad7d60 (tqtc/lts-6.8)
MacOS 15.4.1
Qt Creator 17.0.0
Qt 6.10.0 beta2
Device: Samsung Galaxy S22 14.0
Steps to reproduce:
- Open the demo app - https://doc.qt.io/qt-6/qtdoc-demos-hangman-example.html from Qt Creator's examples tab.
- Select Android Qt 6.10.0 kit and try to run the app.
Expected: The app runs on the device as it is on Qt 6.9.2.
Actual: Getting error, and the app cannot be run:
Error: /Users/.../Qt/Examples/Qt-6.10.0/demos/hangman/build/Android_Qt_6_10_0_Clang_arm64_v8a-Debug/Hangman/hangman.qmltypes:: Cannot generate qmltypes file
NOTE: The app works fine when built with Qt 6.9.2.
Reproducibility: 100%
- is duplicated by
-
QTBUG-137750 [REG 6.9.1-6.10.0 beta1] quick/scenegraph/graph and demos/maroon fails to build with Android on macOS
-
- Closed
-
- relates to
-
QTQAINFRA-7281
Qt Test Attack - 07, 2025
-
- Open
-
- resulted in
-
QTBUG-138622 Android launch wrapper script can conflict with qml subdirectory name on case insensitive file systems
-
- Closed
-
| For Gerrit Dashboard: QTBUG-138565 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 662888,2 | qmltyperegistrar: Print error message if qmltypes file can't be opened | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 662900,2 | Revert "Replace the manual chmod run with the file(CHMOD command" | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 662961,2 | qmltyperegistrar: Print error message if qmltypes file can't be opened | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 662974,2 | Revert "Replace the manual chmod run with the file(CHMOD command" | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 663205,2 | qmltyperegistrar: Print error message if qmltypes file can't be opened | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 663281,2 | qmltyperegistrar: Print error message if qmltypes file can't be opened | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |