qmltyperegistrar: Print error message if qmltypes file can't be opened

Print exact error message when the qmltypes file cannot be opened for
writing.

Pick-to: 6.8
Task-number: QTBUG-138565
Change-Id: Ieef9af8661d5e1c93e4046d276fdd972d3ff8440
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 47b070caf331957c1295f4ca019ba280d57e0794)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 894f5feec47915f9b416133c5b01f76a20c031e9)